fix intro spacing, improve mobile social link contrast & sizing

--- a/src/mobile.less
+++ b/src/mobile.less
@@ -99,7 +99,7 @@ body.mobile {
         z-index: 2;
 
         position: fixed;
-        top: .4em;
+        top: .25em;
         right: .25em;
 
         display: flex;
@@ -107,14 +107,13 @@ body.mobile {
         justify-content: flex-start;
         height: 100vh;
 
-        font-size: .9em;
         opacity: 0.9;
 
         a {
             margin: .9em 0;
             padding: .55em .35em;
             border-radius: 2em;
-            .shaded-blur();
+            background-color: fade(@bgColor, 80%);
         }
     }
 
